# orchestra

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  build.sh  showcase.html
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  pagination.rs  response.rs
template/: .env.example  .gitignore  Cargo.toml
template/migrations/: 0001_initial.sql
template/src/: main.rs
template/src/config/: mod.rs
template/src/controllers/: mod.rs
template/src/middleware/: mod.rs
template/src/models/: mod.rs
template/src/repositories/: mod.rs
template/src/routes/: mod.rs
template/src/services/: mod.rs
template/tests/: mod.rs
template/views/layouts/: base.html
